Closed Bug 510071 Opened 15 years ago Closed 15 years ago

"ASSERTION: should not have pseudo-element data"

Categories

(Core :: CSS Parsing and Computation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: jruderman, Assigned: dbaron)

Details

(Keywords: assertion, testcase)

Attachments

(1 file)

layout/style/crashtests/437170-1.html triggers

###!!! ASSERTION: should not have pseudo-element data: 'mPseudo || !mStyleContextHolder->HasPseudoElementData()', file layout/style/nsComputedDOMStyle.cpp, line 479
Flags: in-testsuite+
This is, um, rather interesting.  The style context in question is the grandchild of a style context with (a) null parent and (b) :-moz-non-element internal pseudo.

I guess that's the result of GetStyleContextForContent's handling of document fragments.  That handling was introduced a long time ago:
http://bonsai.mozilla.org/cvslog.cgi?file=mozilla/extensions/inspector/base/src/inDOMUtils.cpp&rev=1.15
and I think we should instead skip non-element parents.
Attached patch patchSplinter Review
Assignee: nobody → dbaron
Status: NEW → ASSIGNED
Attachment #394156 - Flags: review?(bzbarsky)
Attachment #394156 - Flags: review?(bzbarsky) → review+
http://hg.mozilla.org/mozilla-central/rev/a8caf6d22376
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
OS: Mac OS X → All
Priority: -- → P3
Hardware: x86 → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3
Comment on attachment 394156 [details] [diff] [review]
patch

Simple fix to do less-weird things, to fix an assertion introduced a few days ago.
Attachment #394156 - Flags: approval1.9.2?
Target Milestone: mozilla1.9.3 → mozilla1.9.3a1
Attachment #394156 - Flags: approval1.9.2? → approval1.9.2+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: