Don't resolve a bogus non-element parent when we don't need to and it confuses things.  (Bug 510071)  r=bzbarsky